Change "Unsignedness" => "Signedness"

--- a/fsesrc-submission.tex
+++ b/fsesrc-submission.tex
@@ -126,28 +126,28 @@ Our approach to detecting and preventing signedness errors is to use a type syst
 \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{unsignedness}
-    \caption{The type qualifier hierarchy of the Unsignedness annotations.
+    \caption{The type qualifier hierarchy of the signedness annotations.
 Qualifiers in gray are used internally by the type system but should never be written by a programmer.}
     \label{fig:my_label}
 \end{figure}
 
-The Unsignedness Type System consists of one user defined type, and four internally used types, described in detail below:
+The Signedness Type System consists of one user defined type, and four internally used types, described in detail below:
 
 \begin{itemize}
   \item The Unsigned type is the only user defined type. This is the only way it can be introduced into a program. This type signifies that a value is unsigned, that it is not to be put into any situation in which Java's default assumption of signed integers may place the program into a bad state.
-  \item The Signed type is similarly meant for signed integers, which Java is free to interpret as it pleases. With the exception of logical right shifts, no operator restrictions are placed on Signed values by the Unsignedness Checker.
+  \item The Signed type is similarly meant for signed integers, which Java is free to interpret as it pleases. With the exception of logical right shifts, no operator restrictions are placed on Signed values by the Signedness Checker.
   \item The Constant type is for values which are known at compile time, and could potentially be signed or unsigned depending on how the programmer intends to use them. Even negative literals may be used as a convenience placeholder for a large positive unsigned integer, so we say a constant value is both signed and unsigned.
-  \item The UnknownSignedness type is for values which are either outside of the Unsignedness Checker's scope, or have been mixed so that the Unsignedness Checker no longer knows what signedness to assign to them. In the second case, the presence of an UnknownSignedness value almost always indicates an issue.
-  \item The UnsignednessBottom type is never assigned to anything, and if this type is present in an AST, there is an issue.
+  \item The UnknownSignedness type is for values which are either outside of the Signedness Checker's scope, or have been mixed so that the Signedness Checker no longer knows what signedness to assign to them. In the second case, the presence of an UnknownSignedness value almost always indicates an issue.
+  \item The SignednessBottom type is never assigned to anything, and if this type is present in an AST, there is an issue.
 \end{itemize}
 
 Furthermore, the type system prevents the third class of unsigned integer bugs, the interchange of signed and unsigned integers, by the nature of its hierarchy, shown in Figure~\ref{fig:my_label}.
 
-Types are introduced into a program either by the user, for Unsigned values, or by the the Unsignedness Checker using its type introduction rules. The type introduction rules are best understood through Figure 2, which depicts a flow chart for determining the type of an expression.
+Types are introduced into a program either by the user, for Unsigned values, or by the the Signedness Checker using its type introduction rules. The type introduction rules are best understood through Figure 2, which depicts a flow chart for determining the type of an expression.
 
 % I haven't created the flow chart yet but I think it would be a good way to visually show the introduction rules.
 
-The real work of the Unsignedness Type System is done by its type rules, which eliminate the first two classes of bugs associated with unsigned integers. Generally speaking, these type rules are as follows:
+The real work of the Signedness Type System is done by its type rules, which eliminate the first two classes of bugs associated with unsigned integers. Generally speaking, these type rules are as follows:
 
 \begin{itemize}
   \item Unsigned values may not be used as input for sensitive operators, as such operators are implemented in Java for signed integers.
@@ -164,7 +164,7 @@ These rules prevent Unsigned numbers from being used in ways which would allow J
 
 We seek here to build a verification tool, so that developers may use it to be sure that their software is free of bugs related to unsigned integers. This means that our approach must be sound; that if it says a program is free of bugs it is so. We build our solution on top of the Checker Framework, an API developed by the University of Washington to provide a platform for pluggable type systems to be introduced into a custom version of the javac compiler. This allows our type system to be checked concurrently with that of Java, and potentially other type systems.
 
-The Checker Framework provides the groundwork for many similar type systems solving other common classes of bugs. Such verification tools, called checkers, provide an excellent template to follow when implementing a type system in this framework. We discussed the Unsignedness Type System, which at a high level consists of a series of qualifiers with some hierarchy, a series of introduction rules for determining expression types, and several type rules for issuing errors for malformed code. These parts are implemented in a checker as follows:
+The Checker Framework provides the groundwork for many similar type systems solving other common classes of bugs. Such verification tools, called checkers, provide an excellent template to follow when implementing a type system in this framework. We discussed the Signedness Type System, which at a high level consists of a series of qualifiers with some hierarchy, a series of introduction rules for determining expression types, and several type rules for issuing errors for malformed code. These parts are implemented in a checker as follows:
 
 \begin{itemize}
   \item Type qualifiers are implemented with type annotations. The Checker Framework provides several helper annotations to allow the structure of the type hierarchy and some introduction rules to be defined declaratively.
@@ -177,7 +177,7 @@ The Checker Framework provides the groundwork for many similar type systems solv
 \section{Results and Contributions}
 % I will go back through this section and cite where needed
 
-To put the Unsignedness Checker to the test, we used it to analyze jake2, a Java port of the popular '90s video game, Quake II. This case study is a large, complex piece of software, with many instances of unsigned integers being used in system code. Without applying annotations the Unsignedness Checker listed many perceived errors with using a logical right shift, sometimes called an unsigned right shift, on signed operands. Many of these were eliminated by annotating documented unsigned integers, but a few persisted. By comparing jake2 with the original C implementation, we have been able to identify and record semantic differences between the two systems, particularly in the usage of right shifts. Further analysis is required to determine if these differences have noticeable effects to end users. Furthermore, we have been able to identify one bug, in which an unsigned integer is passed to a utility function which prints its value during debugging. No special handling of the unsigned value is done, so it is printed as if signed, which can possibly lead to erroneous output for values outside signed positive range.
+To put the Signedness Checker to the test, we used it to analyze jake2, a Java port of the popular '90s video game, Quake II. This case study is a large, complex piece of software, with many instances of unsigned integers being used in system code. Without applying annotations the Signedness Checker listed many perceived errors with using a logical right shift, sometimes called an unsigned right shift, on signed operands. Many of these were eliminated by annotating documented unsigned integers, but a few persisted. By comparing jake2 with the original C implementation, we have been able to identify and record semantic differences between the two systems, particularly in the usage of right shifts. Further analysis is required to determine if these differences have noticeable effects to end users. Furthermore, we have been able to identify one bug, in which an unsigned integer is passed to a utility function which prints its value during debugging. No special handling of the unsigned value is done, so it is printed as if signed, which can possibly lead to erroneous output for values outside signed positive range.
 
 % I will edit this to include examples of the semantic differences and possibly the bug
 
@@ -187,4 +187,4 @@ To put the Unsignedness Checker to the test, we used it to analyze jake2, a Java
 \end{document}
 
 %  LocalWords:  papersize Signedness Mackie signedness javac's jake2 90s
-%  LocalWords:  UnknownSignedness UnsignednessBottom
+%  LocalWords:  UnknownSignedness SignednessBottom
