Fix LaTeX error

--- a/fsesrc-submission.tex
+++ b/fsesrc-submission.tex
@@ -6,7 +6,7 @@
 \usepackage{microtype}
 \usepackage{pslatex}
 \usepackage{relsize}
-\usepackage{hyperref}
+\usepackage[pageanchor=false]{hyperref}
 
 \graphicspath{ {figures/} }
 
