Improve figure quality

--- a/fsesrc-submission.tex
+++ b/fsesrc-submission.tex
@@ -8,8 +8,6 @@
 \usepackage{relsize}
 \usepackage[pageanchor=false]{hyperref}
 
-\graphicspath{ {figures/} }
-
 % Add page numbers, remove copyright box.  For submitted version only.
 \pagenumbering{arabic}
 \makeatletter
@@ -130,7 +128,7 @@ Our approach to detecting and preventing signedness errors is to use a type syst
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.4\textwidth]{unsignedness}
+    \includegraphics[width=0.4\textwidth]{signedness}
     \caption{The type qualifier hierarchy of the signedness annotations.
 Qualifiers in gray are used internally by the type system but should never be written by a programmer.}
     \label{fig:my_label}
