--- a/fsesrc-submission.tex
+++ b/fsesrc-submission.tex
@@ -1,6 +1,7 @@
 \documentclass{sig-alternate-05-2015}
 
 \usepackage{amsmath}
+\usepackage{color}
 \usepackage{graphicx}
 \usepackage{listings}
 \usepackage{microtype}
@@ -8,11 +9,17 @@
 \usepackage{relsize}
 \usepackage[pageanchor=false]{hyperref}
 
+%% Comment out one of these two definitions.
+% \newcommand{\todo}[1]{\relax}
+\newcommand{\todo}[1]{{\color{red}\bfseries [[#1]]}}
+
+
 % Add page numbers, remove copyright box.  For submitted version only.
 \pagenumbering{arabic}
 \makeatletter
 \def\@copyrightspace{\relax}
 \makeatother
+
 
 % At least 80% of every float page must be taken up by
 % floats; there will be no page with more than 20% white space.
@@ -152,29 +159,51 @@ byte div = y / x;
 The default annotation is \<@Signed>.
 Qualifiers in gray are used internally by the type system and need not be
 written by a programmer.}
-    \label{fig:my_label}
+    \label{fig:type-hierarchy}
 \end{figure}
 
-We have defined a signedness type system with 5 type qualifiers:
+We have defined a signedness type system with 5 type qualifiers
+(Figure~\ref{fig:type-hierarchy}).  Each type qualifier is written together
+with a base type; for example, \<@Unsigned int i> declares a
+variable named \<i> of type \<@Unsigned int>.
 
 \begin{itemize}\itemsep 0pt \parskip 0pt
-  \item The Unsigned type is the only user defined type. This is the only way it can be introduced into a program. This type signifies that a value is unsigned, that it is not to be put into any situation in which Java's default assumption of signed integers may place the program into a bad state.
-  \item The Signed type is similarly meant for signed integers, which Java is free to interpret as it pleases. With the exception of logical right shifts, no operator restrictions are placed on Signed values by the Signedness Checker.
-  \item The Constant type is for values which are known at compile time, and could potentially be signed or unsigned depending on how the programmer intends to use them. Even negative literals may be used as a convenience placeholder for a large positive unsigned integer, so we say a constant value is both signed and unsigned.
-  \item The UnknownSignedness type is for values which are either outside of the Signedness Checker's scope, or have been mixed so that the Signedness Checker no longer knows what signedness to assign to them. In the second case, the presence of an UnknownSignedness value almost always indicates an issue.
-  \item The SignednessBottom type is never assigned to anything, and if this type is present in an AST, there is an issue.
+  \item \<@Unsigned> signifies that a value is interpreted as unsigned.
+  \item \<@Signed> signifies that a value is interpreted as signed.
+  \item \<@Constant> is for values known at compile time, such as
+    manifest literals in the source code.  The programmer might intend to
+    use them as signed or as unsigned values.  Even a negative literal may
+    be used as a convenience placeholder for a large positive unsigned
+    integer.
+  \item \<@UnknownSignedness> indicates a value for which the 
+    Signedness Checker has no estimate.  (This usually leads to a
+    type-checking warning.)  It is also used for non-numeric
+    values, which the Signedness Checker ignores.
+  \item \<@SignednessBottom> indicates dead code or the \<null> value.
 \end{itemize}
 
-Furthermore, the type system prevents the third class of unsigned integer bugs, the interchange of signed and unsigned integers, by the nature of its hierarchy, shown in Figure~\ref{fig:my_label}.
+The programmer writes \<@Unsigned> type qualifiers within field and method
+declarations in the program's source code.  Unannotated Java types within
+field and method signatures are given a default qualifier (usually
+\<@Signed>).  Type uses within method bodies are inferred.  More
+specifically, here are the type introduction rules of our type system:
 
-Types are introduced into a program either by the user, for Unsigned values, or by the the Signedness Checker using its type introduction rules. Types are introduced as follows, noting that these checks are done in a defined order:
+\todo{This mixes type introduction rules, which add a qualifier to an
+  existing type occurrence (say, in a variable or field declaration), and
+  rules that determine the type of an expression.  I think it would be
+  helpful to separate these cases.}
 
 \begin{enumerate}\itemsep 0pt \parskip 0pt
-  \item If a user has declared an expression to be Unsigned, then it is assigned this type.
-  \item If an expression is not a leaf in the syntax tree (i.e. not a terminating symbol), its type is the least upper bound of the types in the tree rooted on it.
-  \item If an expression is a constant at compile time, it is given the Constant type.
-  \item If an expression is an integral type, for which signedness must be considered, it is given the Signed type.
-  \item If no other type was assigned to an expression, it's signedness is not known to the Signedness Checker and it is given the top type, UnknownSignedness.
+  \item If the user wrote a type qualifier, use it.
+  \item If an integral expression is a constant at compile time, use
+    \<@Constant>.
+    Integral types are \<char>, \<byte>, \<short>, \<int>, \<long>, \<Integer>, and \<Long>.
+  \item If an expression is not a leaf in the syntax tree (i.e. not a
+    terminating symbol), its type is the least upper bound of the types in
+    the tree rooted on it.\todo{This doesn't make sense to Mike; please
+      explain.  Are you talking about operators and \<if>?}
+  \item Other integral expressions use \<@Signed>.
+  \item Other non-integral expressions use the top type, \<@UnknownSignedness>.
 \end{enumerate}
 
 The real work of the Signedness Type System is done by its type rules, which eliminate the first two classes of bugs associated with unsigned integers. Generally speaking, these type rules are as follows:
